@@ -14,6 +14,9 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 -------------------------------------------------
+
+- Fix LABELPNT geomtransform position for non-cached labels (#4121)
+
 - Add RFC80 font fallback support (#4114)
 
 - Added POLAROFFSET style option for a different symbol transform (#4117)
